tests/NormalTests/paczka1/small_fuzzy/91815400.err
Error in line 1: wW1Yj8 S473 87,2
Error in line 2: 3ftZW S473 28,4
Error in line 9: wW1Yj8 A300 92,36
Error in line 11: FVcJ^QkDV A300 87,7
Error in line 16: 3ftZW S473 9q,6
